force-app/main/default/objects/B_n_ficiaire__c/B_n_ficiaire__c.object-meta.xml
<CustomObject>
    <label>Bénéficiaire</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bénéficiaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>