force-app/main/default/objects/B_n_ficiaire__c/fields/Beneficiaire__c.field-meta.xml
<CustomField>
    <fullName>Beneficiaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bénéficiaire du Don</label>
    <referenceTo>Organisateur__c</referenceTo>
    <relationshipLabel>Bénéficiaires</relationshipLabel>
    <relationshipName>B_n_ficiaires</relationshipName>
    <type>Lookup</type>
</CustomField>