force-app/main/default/objects/B_n_ficiaire__c/fields/DL__c.field-meta.xml
<CustomField>
    <fullName>DL__c</fullName>
    <formula>Don__r.DL_DT__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL</label>
    <type>Text</type>
</CustomField>