force-app/main/default/objects/B_n_ficiaire__c/fields/Don__c.field-meta.xml
<CustomField>
    <fullName>Don__c</fullName>
    <label>Don</label>
    <referenceTo>Donprotocolairesiege__c</referenceTo>
    <relationshipLabel>Bénéficiaires</relationshipLabel>
    <relationshipName>B_n_ficiaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>