force-app/main/default/objects/B_n_ficiaire__c/fields/getclotureBen__c.field-meta.xml
<CustomField>
    <fullName>getclotureBen__c</fullName>
    <formula>Don__r.getcloture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clôturé</label>
    <type>Text</type>
</CustomField>