force-app/main/default/objects/B_n_ficiaire__c/fields/getValidationnddon__c.field-meta.xml
<CustomField>
    <fullName>getValidationnddon__c</fullName>
    <formula>Don__r.Validation_Note_de_D_pense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>get nd don</label>
    <type>Text</type>
</CustomField>