force-app/main/default/objects/B_n_ficiaire__c/fields/Montant_don_HT__c.field-meta.xml
<CustomField>
    <fullName>Montant_don_HT__c</fullName>
    <formula>Don__r.Montant_du_Don_HT__c  *  Part_du_Don__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant du don</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>