force-app/main/default/objects/B_n_ficiaire__c/fields/Montant_Perception_HT__c.field-meta.xml
<CustomField>
    <fullName>Montant_Perception_HT__c</fullName>
    <formula>IF(   ISPICKVAL(Don__r.Type_Don__c, &apos;Protocolaire&apos;)   , Don__r.Montant_global_des_droits_d_auteur_HT__c  , Don__r.Montant_des_droits__c * Part_du_Don__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Perception HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>