force-app/main/default/objects/B_n_ficiaire__c/fields/MontantPP__c.field-meta.xml
<CustomField>
    <fullName>MontantPP__c</fullName>
    <formula>Montant_Perception_HT__c * Part_du_Don__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MontantPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>