force-app/main/default/objects/B_n_ficiaire__c/fields/Name_b_n_ficiaire__c.field-meta.xml
<CustomField>
    <fullName>Name_b_n_ficiaire__c</fullName>
    <formula>Beneficiaire__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du bénéficiaire</label>
    <type>Text</type>
</CustomField>