force-app/main/default/objects/B_n_ficiaire__c/fields/Name_Ben__c.field-meta.xml
<CustomField>
    <fullName>Name_Ben__c</fullName>
    <label>Name Ben</label>
    <length>100</length>
    <type>Text</type>
</CustomField>