force-app/main/default/objects/B_n_ficiaire__c/fields/Part_du_Don__c.field-meta.xml
<CustomField>
    <fullName>Part_du_Don__c</fullName>
    <label>Part du Don</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>