force-app/main/default/objects/B_n_ficiaire__c/fields/Statut_Direction_R_seau__c.field-meta.xml
<CustomField>
    <fullName>Statut_Direction_R_seau__c</fullName>
    <formula>Don__r.getdirectionstatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut  Direction Réseau</label>
    <type>Text</type>
</CustomField>