force-app/main/default/objects/B_n_ficiaire__c/fields/Type_Don__c.field-meta.xml
<CustomField>
    <fullName>Type_Don__c</fullName>
    <formula>TEXT(Don__r.Type_Don__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Don</label>
    <type>Text</type>
</CustomField>