force-app/main/default/objects/B_n_ficiaire__c/validationRules/Validation_Directeur_DLDT.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Directeur_DLDT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(  Don__r.D_cisionDL__c , &apos;Accord&apos;) , ISCHANGED(  Name_Ben__c   )   )</errorConditionFormula>
    <errorMessage>Après Validation par la DL/DT vous ne pouvez plus changer le bénéficiaire</errorMessage>
</ValidationRule>