force-app/main/default/objects/B_n_ficiaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_b_n_ficiaire__c</columns>
    <columns>Type_Don__c</columns>
    <columns>DL__c</columns>
    <columns>Statut_Direction_R_seau__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>